--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
@@ -253,10 +253,10 @@
       }
     }
     .inputs-wrapper{
-      max-width: 510px;
+      max-width: 68%;
     }
     .field-block-multiple{
-      max-width: 510px;
+      max-width: 68%;
     } 
     .single-education-block::after{
       width: 100%;
