--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/notifications-user-settings/notifications-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/notifications-user-settings/notifications-user-settings.component.scss
@@ -94,7 +94,7 @@
   line-height: 20px;
   color: #707683;
   margin: 0;
-  max-width: 510px;
+  max-width: 68%;
 }
 input[type=checkbox].tgl-classic + label{
   background: #fbfcfd;
