--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -333,7 +333,7 @@
     box-shadow: inset 0 0 0 1px #f44336;
   }
 
-  // //  ---------- Star Raiting ----------
+  // //  ---------- Star Rating ----------
 
   .star-rating {
     font-style: normal;
@@ -437,7 +437,13 @@
   }
 }
 
-
-
+@media (max-width: 1499px) {
+    //  ---------- tetrary button ---------- //
+    .btn-third {
+      font-size: 13px;
+      line-height: 18px;
+      min-width: 145px;
+    }
+}
 
 
