--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -15,12 +15,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin-left: 30px;
-  margin-top: 20px;
+  margin: 20px -15px 0;
 }
 .card {
   width: calc(25% - 30px);
-  margin: 0 30px 42px 0;
+  margin: 0 15px 42px;
   box-sizing: border-box;
   font-family: "Source Sans Pro", sans-serif;
   color: #323c47;
