--- a/src/app/catalog-page/catalog/catalog.component.scss
+++ b/src/app/catalog-page/catalog/catalog.component.scss
@@ -113,18 +113,29 @@
   }
 }
 
-@media (max-width: 1499px) {
+@media (max-width: 1499px) {  
   .wrapper{
     max-width: 1110px;
   }
+  .bread-crumbs{
+    margin-top: 35px;
+    margin-bottom: 35px;
+  }
   .section-title{
     font-size: 36px;
-    margin-bottom: 80px;
+    line-height: 34px;
+    margin-bottom: 60px;
   }
 }
 
-@media (max-width: 1360px) {
+@media (max-width: 1360px) {   
   .wrapper{
     max-width: 1010px;
   }
 }
+
+// @media (max-width: 1024px) {   tablet 
+
+// @media (max-width: 767px) {   mobile
+
+// @media (max-width: 360px) {   Small mobile 
