--- a/src/app/chat/components/message-list/message-list.component.scss
+++ b/src/app/chat/components/message-list/message-list.component.scss
@@ -314,3 +314,17 @@
     transform: translateY(10px) scale(1.5);
   }
 }
+
+@media (max-width: 1499px) {
+  .brief {
+    .deal-start {
+      margin-bottom: 10px;
+    }
+  }
+  .message {
+    .text {
+      min-width: 380px;
+      padding: 14px 20px;
+    }
+  }
+}
