--- a/src/app/shared/modules/calendar/calendar.component.scss
+++ b/src/app/shared/modules/calendar/calendar.component.scss
@@ -172,3 +172,12 @@
     }
   }
 }
+
+@media (max-width: 1499px) {
+  .calendar .title{
+    height: 47px;
+    border-radius: 0px 4px 0px 0px;
+    margin-bottom: 11px;
+    box-shadow: none;
+  }
+}
