--- a/src/app/shared/modules/users-comments/users-comments.component.scss
+++ b/src/app/shared/modules/users-comments/users-comments.component.scss
@@ -307,7 +307,7 @@
     margin-bottom: 12px;
   }
 
-  &__raiting {
+  &__rating {
     display: flex;
 
     font-size: 16px;
@@ -320,6 +320,13 @@
 
       span {
         padding-right: 7px;
+      }
+    }
+    &.service-page__version{
+      .comment__rating-item{
+        span{
+          white-space: nowrap;
+        }
       }
     }
   }
@@ -391,5 +398,16 @@
     min-width: 130px;
     font-size: 13px;
     line-height: inherit;
+  }
+}
+
+@media (max-width: 1499px) {
+  .comment {
+    &__rating {
+      &.service-page__version{
+        position: relative;
+        right: 20px;
+      }
+    }
   }
 }
