--- a/src/app/chat/components/brief-message-showing/brief-message-showing.component.scss
+++ b/src/app/chat/components/brief-message-showing/brief-message-showing.component.scss
@@ -168,7 +168,7 @@
     width: auto;
     h5{
       font-size: 16px;
-      line-height: 20px;
+      line-height: 18px;
       padding: 0 0 4px;
     }
     p{
@@ -178,15 +178,25 @@
   .title{
     h4{
       font-size: 16px;
-      line-height: 20px;
+      line-height: 18px;
       padding: 0 0 4px;
     }
     p{
       margin: 4px 0 0;
+      font-size: 16px;
+      line-height: 18px;
+    }
+    .brief-icon{
+        width: 50px;
+        min-width: 50px;
+        height: 50px;
     }
   }
   .brief-wrap-btn {
     font-size: 13px;
+  }
+  .brief-decisions-options{
+    margin: 20px 0 10px;
   }
 }
 
