--- a/src/app/chat/components/messenger-tools/messenger-tools.component.scss
+++ b/src/app/chat/components/messenger-tools/messenger-tools.component.scss
@@ -277,15 +277,14 @@
         font-weight: 600;
         color: #323C47;
         font-family: "Source Sans Pro", sans-serif;
-        padding-bottom: 10px;
+        // padding-bottom: 10px;
         margin-bottom: 10px;
-        border-bottom: 1px solid #EBEEFF;
+        // border-bottom: 1px solid #EBEEFF;
       }
       .main-info{
         font-size: 14px;
         line-height: 18px;
         padding-bottom: 10px;
-        margin-bottom: 10px;
         border-bottom: 1px solid #EBEEFF;
         p:last-of-type{
           margin-bottom: 0;
