--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -108,6 +108,7 @@
         flex-direction: column;
         height: 100%;
         box-sizing: border-box;
+        min-width: 260px;
       }
       .status {
         padding: 37px 20px 30px;
