--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -63,7 +63,7 @@
                         <div class="delete-file" (click)="deleteAttachment(imgUrl.id)">
 
                         </div>
-                        <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + imgUrl.link" height="300" />
+                        <img [src]="imgUrl.link" height="300" />
                         <div class="choose-as-main-photo" (click)="putAsMainPhoto(imgUrl.link)">сделать обложкой</div>
                     </div>
 
