--- a/src/app/authorization-page/set-new-pass/set-new-pass.component.html
+++ b/src/app/authorization-page/set-new-pass/set-new-pass.component.html
@@ -1,69 +1,57 @@
 <div class="registration-bl">
-        <div class="nav-menu">
-            <app-main-header [pageName]="'authoriz'"></app-main-header>
-            </div>
-  <div class="container">
-    <div class="column">
-      <h2>Восстановление пароля</h2>
+    <div class="nav-menu">
+        <app-main-header [pageName]="'authoriz'"></app-main-header>
+    </div>
+    <div class="container">
+        <div class="column">
+            <h2>Восстановление пароля</h2>
 
-      <form #form="ngForm" [formGroup]="registrationForm" (ngSubmit)="registrate()">
-        <mat-form-field>
-          <mat-label>Введите пароль</mat-label>
-          <input matInput type="password" [type]="hideF ? 'password' : 'text'" formControlName="password" required />
-          <div class="pass-erorrs">
-            <span
-              [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber') ? 'unvalidated': 'validated'"></span>
-            <span
-              [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasCapitalCase') ? 'unvalidated': 'validated'"></span>
-            <span
-              [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSmallCase') ? 'unvalidated': 'validated'"></span>
-            <span
-              [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSpecialCharacters') ? 'unvalidated': 'validated'"></span>
-            <span
-              [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
-            <ul class="description">
+            <form #form="ngForm" [formGroup]="registrationForm" (ngSubmit)="registrate()">
+                <mat-form-field>
+                    <mat-label>Введите пароль</mat-label>
+                    <input matInput type="password" [type]="hideF ? 'password' : 'text'" formControlName="password" required />
+                    <div class="pass-erorrs">
+                        <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber') ? 'unvalidated': 'validated'"></span>
+                        <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasCapitalCase') ? 'unvalidated': 'validated'"></span>
+                        <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSmallCase') ? 'unvalidated': 'validated'"></span>
+                        <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSpecialCharacters') ? 'unvalidated': 'validated'"></span>
+                        <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
+                        <ul class="description">
 
-              <li *ngIf=" registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber')">Должна быть минимум одна цифра
-              </li>
-              <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasSmallCase')">Должна быть минимум онда
-                маленькая буква</li>
-              <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasCapitalCase')">Должна быть минимум онда
-                большая буква</li>
-              <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasSpecialCharacters')">Должна быть минимум
-                один спец символ</li>
-              <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('minLengthCharacters')">Пароль не меньше 8
-                символов</li>
-            </ul>
-          </div>
-          <button class="pass" mat-icon-button matSuffix (click)="hideF = !hideF" [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hideF" [style.color]="hideF ? '#DBDBDB': '#000'">
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber')">Должна быть минимум одна цифра
+                            </li>
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasSmallCase')">Должна быть минимум одна маленькая буква</li>
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasCapitalCase')">Должна быть минимум одна большая буква</li>
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasSpecialCharacters')">Должна быть минимум один спец символ</li>
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('minLengthCharacters')">Пароль не меньше 8 символов
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="pass" mat-icon-button matSuffix (click)="hideF = !hideF" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideF" [style.color]="hideF ? '#DBDBDB': '#000'">
             <mat-icon>{{hideF ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
-          <mat-error *ngIf="registrationForm.get('password').hasError('required')">{{ "Введите пароль" }}</mat-error>
-          <mat-error
-            *ngIf="registrationForm.get('password').invalid && !registrationForm.get('password').hasError('required')">{{'Слабый пароль'
-                  }}</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Повторно введите пароль</mat-label>
-          <input matInput type="password" [type]="hideS ? 'password' : 'text'" formControlName="password_confirmation" required />
-          <button class="pass" mat-icon-button matSuffix (click)="hideS = !hideS" [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hideS" [style.color]="hideS ? '#DBDBDB': '#000'">
+                    <mat-error *ngIf="registrationForm.get('password').hasError('required')">{{ "Введите пароль" }}</mat-error>
+                    <mat-error *ngIf="registrationForm.get('password').invalid && !registrationForm.get('password').hasError('required')">{{'Слабый пароль' }}
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Повторно введите пароль</mat-label>
+                    <input matInput type="password" [type]="hideS ? 'password' : 'text'" formControlName="password_confirmation" required />
+                    <button class="pass" mat-icon-button matSuffix (click)="hideS = !hideS" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideS" [style.color]="hideS ? '#DBDBDB': '#000'">
             <mat-icon>{{hideS ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
-          <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('required')">{{ "Введите пароль" }}
-          </mat-error>
-          <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('NoPassswordMatch')">{{
-                    "Пароли не совпадают"
-                  }}</mat-error>
-        </mat-form-field>
-        <section class="submit">
-          <button mat-button type="submit" mat-raised-button>
+                    <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('required')">{{ "Введите пароль" }}
+                    </mat-error>
+                    <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('NoPassswordMatch')">{{ "Пароли не совпадают" }}
+                    </mat-error>
+                </mat-form-field>
+                <section class="submit">
+                    <button mat-button type="submit" mat-raised-button>
             Сохранить
           </button>
-        </section>
-      </form>
+                </section>
+            </form>
+        </div>
     </div>
-  </div>
 </div>
 <app-inform-popup *ngIf="message" [(message)]="message"></app-inform-popup>
