--- a/src/app/chat/components/chat-component/chat-component.html
+++ b/src/app/chat/components/chat-component/chat-component.html
@@ -21,5 +21,5 @@
     <section class="file-loader" *ngIf="isFileLoaderVisible && collocutorData">
         <app-upload-file [(isFileLoaderVisible)]="isFileLoaderVisible" [collocutorData]="collocutorData" (uploadedBreefFiles)="uploadedBriefFiles" [chatType]="chatType"></app-upload-file>
     </section>
-
+    <app-chat-errors></app-chat-errors>
 </section>
