--- a/src/app/chat/components/chat-errors/chat-errors.component.html
+++ b/src/app/chat/components/chat-errors/chat-errors.component.html
@@ -1,1 +1,17 @@
-<p>chat-errors works!</p>
+<div class="wrapper" *ngIf="errorMessage">
+
+    <div class="message">
+        <span class="close-popup" (click)="cancel()"></span>
+
+        <img src="/assets/images/icons/attention.png" alt="attention">
+
+        <p class="title">{{ errorMessageText.title }}</p>
+        <p class="description">
+            {{ errorMessageText.description }}
+        </p>
+        <div>
+            <button class="cancel-popup" (click)="cancel()"><span>{{ errorMessageText.btn_cancel }}</span> </button>
+            <button class="submit-popup"><span>{{ errorMessageText.btn_submit }}</span> </button>
+        </div>
+    </div>
+</div>
