--- a/src/app/chat/components/rate-deal/rate-deal.component.scss
+++ b/src/app/chat/components/rate-deal/rate-deal.component.scss
@@ -124,6 +124,20 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 22px;
+        &.invalid {
+            textarea {
+                border-color: rgba(253, 31, 58, 0.25);
+            }
+            .error-message {
+                font-family: Source Sans Pro, sans-serif;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 13px;
+                line-height: 16px;
+                color: #FD1F3A;
+                margin-top: 5px;
+            }
+        }
         label {
             font-style: normal;
             font-weight: normal;
@@ -142,7 +156,7 @@
             resize: none;
             box-sizing: border-box;
             padding: 14px;
-            font-family: Source Sans Pro;
+            font-family: Source Sans Pro, sans-serif;
             font-style: normal;
             font-weight: normal;
             font-size: 16px;
